--- a/source/_posts/数模培训.md
+++ b/source/_posts/数模培训.md
@@ -30,21 +30,7 @@ keywords:
 
 PS: 模糊相似矩阵可以通过多种方法求得，不细讲了，通常有：
 
-* 指数相似度法：
-
-    
-
-    > $$
-    > \begin{cases}
-    > r_{ij}=\frac{1}{m}\sum_{k=1}^{m}\exp-{\frac{3}{4}\frac{(x_{ik}-x_{jk})^2}{s_k^2}} \\
-    > \bar x=\frac{1}{n} \sum_{i=1}^k x_{ik} \\
-    > s_k^2=\frac{1}{n-1}\sum_{k=1}^{n}(x_{ik}-\bar x_k)^2
-    > \end{cases}
-    > $$
-    >
-    > 
-
-    
+* 指数相似度法
 
 * 最大值最小法
 
@@ -196,17 +182,76 @@ prinf(uf.fa)
 
 ![image-20210707012044252](https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed02@image_bed_001/img/20210707012044.png)
 
+#### 思路
+
+题意有点奇怪，理解有两种题意：
+
+* 疑问：因为有4-5年的维修费意思是买来就要付第一年的维修费？~~黑心~~
+* 题意1：维修费与机器使用时间有关，逐年递增比如维修三年需要（5+6+8）。
+* 题意2：维修费用和机器使用时间无关，只与每年行情有关，第一年买的机器和第四年买的机器都只需要18的维修费。
+
+
+
+如果题意1：可以从当前点向前分别连接5条边，权值分别为 `[5,11,19,30,48]` ，然后逐年连 `[11,11,12,12,13]`的边权，建图跑1-5的最短路就行了。
+
+如果题意2：感觉和最短路没什么关系了，直接贪心？
+
 #### CODE
 
-~~第一次用python码最短路~~
+~~因为要求是用最短路解决，所以我默认是题意1~~
 
 ```python
-# 明天码
+from queue import PriorityQueue
+inf =0x3f3f3f3f
+
+class Pair(object):
+    def __init__(self,node,dis):
+        self.node=node
+        self.dis=dis
+    def __lt__(self, other):
+        return self.dis<other.dis
+class Dij(object):
+    def __init__(self,num):
+        self.num=num
+        self.f=[[] for i in range(num)]
+        self.dis=[inf for i in range(num)]
+        self.use=[False for i in range(num)]
+    def build(self,a,b):
+        for i in range(self.num):
+            for j in range(len(a)):
+                if i+j+1>5:
+                    continue
+                self.f[i].append((i+j+1,a[i]+b[j]))
+    def solve(self,qx,zx):
+        q=PriorityQueue()
+        q.put(Pair(qx,0))
+        self.dis[qx]=0
+        while not q.empty():
+            # get 会自动remove
+            temp=q.get()
+            if self.use[temp.node]:
+                continue
+            self.use[temp.node]=True
+            for i in self.f[temp.node]:
+                if self.dis[i[0]]>self.dis[temp.node]+i[1]:
+                    self.dis[i[0]]=self.dis[temp.node]+i[1]
+                    q.put(Pair(i[0],self.dis[i[0]]))
+
+        ans=self.dis[zx]
+        return ans
+
+a=[11,11,12,12,13]
+b=[5,11,19,30,48]
+
+dij=Dij(6)
+dij.build(a,b)
+print(dij.solve(0,5))
+print(dij.dis)
 ```
 
 
 
-
+## Day3
 
 {% tip blue%} To be continue{% endtip %}
 
