--- a/source/_posts/数模培训.md
+++ b/source/_posts/数模培训.md
@@ -14,9 +14,7 @@ description: 培训知识点总结，reference 司首奎
 keywords:
 ---
 
-##  Day 1
-
-### 模糊数学聚类基础
+## 第一讲 模糊数学聚类基础
 
 #### 例题
 
@@ -170,13 +168,11 @@ prinf(uf.fa)
 
 
 
-### 排队论
+## 第二讲 排队论
 
 
 
-## Day 2
-
-### 简单图论
+## 第三、四讲 简单图论
 
 #### 例题
 
@@ -251,7 +247,74 @@ print(dij.dis)
 
 
 
-## Day3
+## 第五讲 方差分析
+
+#### 例题
+
+![image-20210710124111879](https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed02@image_bed_001/img/20210710124232.png)
+
+#### 思路
+
+就是一个显著性检验，SPSS分析就完事了。~~概率论全忘光~~，
+
+
+
+
+
+
+
+## 第六讲 机器学习
+
+
+
+
+
+## 第七讲 整数规划
+
+## 第八讲 BP神经网络
+
+
+
+
+
+## 第九讲 多目标优化
+
+
+
+## 第十讲 过程预测与优化
+
+
+
+## 第十一讲 时间序列分析
+
+
+
+## 第十二讲 马氏链模型
+
+
+
+## 第十三讲 蒙特卡洛模拟
+
+### 了解
+
+![image-20210715195437434](https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed03@image_bed_001/img/20210715195437.png)
+
+#### Code
+
+```python
+# 读懂了就很简单了
+
+```
+
+
+
+
+
+
+
+
+
+
 
 {% tip blue%} To be continue{% endtip %}
 
